[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/playing_scene/combat/combat_overlay.gd" type="Script" id=1]
[ext_resource path="res://scenes/playing_scene/combat/combat_skill_line.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/ShipporiAntique-Medium.otf" type="DynamicFontData" id=3]
[ext_resource path="res://images/triangle.png" type="Texture" id=4]
[ext_resource path="res://scenes/ui/v_box_layout.gd" type="Script" id=5]
[ext_resource path="res://scenes/playing_scene/combat/combat_avatar.tscn" type="PackedScene" id=6]

[sub_resource type="Gradient" id=14]
interpolation_mode = 2
offsets = PoolRealArray( 0.2, 0.4, 0.6, 0.8 )
colors = PoolColorArray( 0, 0, 0, 0.752941, 0.376471, 0.376471, 0.376471, 0, 0.568627, 0.568627, 0.568627, 0, 0, 0, 0, 0.752941 )

[sub_resource type="GradientTexture2D" id=15]
gradient = SubResource( 14 )
fill_from = Vector2( 1, 1 )

[sub_resource type="StyleBoxTexture" id=16]
texture = SubResource( 15 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0, 0, 0, 0.498039 )

[sub_resource type="DynamicFont" id=11]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -1
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=17]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -8
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=25]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 512, 443 )

[sub_resource type="DynamicFont" id=28]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -12
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=29]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 443, 512, -443 )

[sub_resource type="StyleBoxFlat" id=23]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0, 0, 0, 0.752941 )

[sub_resource type="DynamicFont" id=30]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -8
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=31]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 512, 443 )

[sub_resource type="DynamicFont" id=26]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -10
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=27]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 443, 512, -443 )

[sub_resource type="DynamicFont" id=32]
size = 30
outline_size = 1
font_data = ExtResource( 3 )

[node name="CombatOverlay" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 640, 360 )
custom_styles/panel = SubResource( 16 )
script = ExtResource( 1 )

[node name="MyControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2

[node name="StatePanel" type="Panel" parent="MyControl"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 72.0
margin_top = 16.0
margin_right = 216.0
margin_bottom = 104.0
mouse_filter = 2
custom_styles/panel = SubResource( 19 )

[node name="Power" type="Label" parent="MyControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 14.0
margin_top = -104.0
margin_right = 70.0
margin_bottom = -48.0
rect_pivot_offset = Vector2( 28, 28 )
custom_fonts/font = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "3"
align = 1
valign = 1

[node name="Hit" type="Label" parent="MyControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 24.0
margin_top = -42.0
margin_right = 64.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 20, 20 )
custom_fonts/font = SubResource( 17 )
custom_styles/normal = SubResource( 25 )
text = "1"
align = 1
valign = 1

[node name="Block" type="Label" parent="MyControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 24.0
margin_top = 2.0
margin_right = 64.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 20, 20 )
custom_fonts/font = SubResource( 28 )
custom_styles/normal = SubResource( 29 )
text = "1"
align = 1
valign = 1

[node name="SkillContainer" type="Panel" parent="MyControl"]
margin_left = 72.0
margin_top = 120.0
margin_right = 400.0
margin_bottom = 168.0
custom_styles/panel = SubResource( 23 )
script = ExtResource( 5 )

[node name="CombatSkillLine" parent="MyControl/SkillContainer" instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 40.0

[node name="CombatSkillLine2" parent="MyControl/SkillContainer" instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = 48.0
margin_right = 320.0
margin_bottom = 80.0

[node name="CombatSkillLine3" parent="MyControl/SkillContainer" instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = 88.0
margin_right = 320.0
margin_bottom = 120.0

[node name="CombatSkillLine4" parent="MyControl/SkillContainer" instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = 128.0
margin_right = 320.0
margin_bottom = 160.0

[node name="RivalControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2

[node name="StatePanel" type="Panel" parent="RivalControl"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -104.0
margin_right = -72.0
margin_bottom = -16.0
mouse_filter = 2
custom_styles/panel = SubResource( 19 )

[node name="Block" type="Label" parent="RivalControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -42.0
margin_right = -24.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 20, 20 )
custom_fonts/font = SubResource( 30 )
custom_styles/normal = SubResource( 31 )
text = "1"
align = 1
valign = 1

[node name="Hit" type="Label" parent="RivalControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 2.0
margin_right = -24.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 26 )
custom_styles/normal = SubResource( 27 )
text = "1"
align = 1
valign = 1

[node name="Power" type="Label" parent="RivalControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = 48.0
margin_right = -16.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 32, 32 )
custom_fonts/font = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "3"
align = 1
valign = 1

[node name="SkillContainer" type="Panel" parent="RivalControl"]
margin_left = -400.0
margin_top = -168.0
margin_right = -72.0
margin_bottom = -120.0
grow_vertical = 0
custom_styles/panel = SubResource( 23 )
script = ExtResource( 5 )
reverse = true

[node name="CombatSkillLine" parent="RivalControl/SkillContainer" instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = -112.0
margin_right = 320.0
margin_bottom = -80.0

[node name="CombatSkillLine2" parent="RivalControl/SkillContainer" instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = -72.0
margin_right = 320.0
margin_bottom = -40.0

[node name="CombatSkillLine3" parent="RivalControl/SkillContainer" instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = -32.0
margin_right = 320.0
margin_bottom = 0.0

[node name="CombatSkillLine4" parent="RivalControl/SkillContainer" instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 40.0

[node name="TimingLabel" type="Label" parent="."]
margin_left = 448.0
margin_right = 832.0
margin_bottom = 48.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 32 )
text = "Timing"
align = 1
valign = 1

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 640, 360 )

[node name="MyCombatAvatar" parent="Node2D" instance=ExtResource( 6 )]
unique_name_in_owner = true
position = Vector2( 144, 0 )

[node name="RivalCombatAvatar" parent="Node2D" instance=ExtResource( 6 )]
unique_name_in_owner = true
position = Vector2( -144, 0 )
rotation = 3.14159
